--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   supabase_flutter: ^2.8.4
   radix_icons: ^1.0.1
   image_picker: ^1.1.2
+  uuid: ^4.5.1
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
